Multilanguage functionality Adding and Bug Fixing

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -1,176 +1,322 @@
 {
-	"demo.greeting": "Hallo {{name}}!",
-	"demo.text": "﻿Dies ist eine einfache Applikation um die Funktionen von ngx-transalte zu demonstrieren.",
-	"demo.text-in-code": "Verwendung von Übersetzungen im Sourcecode",
-  "demo.title": "Übersetzungs-Demo",
+  "shared":{
+	  "uploadResume":"Lebenslauf hochladen",
+	  "uploadTitle":"Bitte laden Sie Ihren Lebenslauf hoch. Klicken Sie auf die Schaltfläche unten, um die Seite zum Fortsetzen des Uploads umzuleiten.",
+      "iWillChooseWhileApplying": "Ich werde den Lebenslauf während der Bewerbung auswählen",
+	  "later":"Später",
+	  "upload":"Hochladen",
+	  "uploadSuccess":"Super, du hast ein neues Spiel!!",
+	  "ok":"Okay",
+	  "jobDesc":"Arbeitsbeschreibung",
+	  "download":"Herunterladen",
+	  "goMatches":"Gehe zu Spiele",
+	  "greeting":"Hallo",
+	  "totalMatches":"Gesamtzahl der Spiele",
+	  "byLocation":"Job nach Standort",
+	  "byAvailability":"Nach Verfügbarkeit",
+	  "jobPosted":"Stellenausschreibung",
+	  "byJobType":"Nach Jobtyp",
+      "default": "Standard",
+	  "byVisa":"Visa gesponserte Jobs" ,
+	  "coverLetter":"Motivationsschreiben",
+	  "addCover":"Cover hinzufügen",
+	  "addCoverTitle":" Titel des Covers",
+      "resume": "Lebenslauf",
+      "add": "hinzufügen",
+	  "addResume":"Lebenslauf hinzufügen",
+	  "addResumeTitle":" Titel des Lebenslaufs",
+	  "matches":"Streichhölzer",
+	  "sendMail":"Mail senden",
+	  "chooseJobs":"Wählen Sie Jobs",
+	  "profileSetting":"Profileinstellungen",
+	  "show":"Zeigen",
+	  "hide":"verstecken",
+	  "hired":"Gemietet",
+	  "jobsNotFound":"Keine Jobs gefunden",
+	  "filter":"Filter",
+	  "clear":"Klar",
+	  "experience":"Erfahrung",
+	  "jobType":"Auftragstyp",
+	  "salary":"Gehalt",
+	  "sapSkills":"SAP-Kenntnisse",
+	  "applied":"Angewandt",
+	  "description":"Beschreibung",
+	  "apply":"Anwenden",
+	  "missing":"Fehlen",
+	  "moreSkills":"Mehr Fähigkeiten",
+	  "applyNow":"Jetzt bewerben",
+	  "candidateMatches":"Kandidaten-Matches",
+      "salary": "Zahlen",
+	  "score":"SPIELSTAND",
+	  "viewAll":"Alle ansehen",
+      "aboutUs": "Über uns",
+      "jobPreview": "Jobvorschau",
+      "candidateViewJobs": "Bewerber Jobs anzeigen",
+	  "youHave":"Sie haben",
+	  "closed":"Abgeschlossen",
+	  "read": "Lesen",
+	  "write": "Schreiben",
+	  "speak": "Sprechen",
+	  "active": "Aktiv",
+      "paused": "Angehalten",
+      "closed": "Abgeschlossen",
+	  "edit":"Bearbeiten",
+	  "name":"Name",
+	  "email":"Email",
+      "search": "Suche",
+	  "companyName":"Name der Firma",
+	  "select":"Auswählen",
+	  "saveClose":"Speichern & schließen",
+	  "showMatches":"Spiele anzeigen",
+	  "screeningProcess":"Untersuchungsvorgang",
+	  "otherPost":"Anderer Beitrag",
+	  "firstName": "Vorname",
+      "lastName": "Nachname",
+      "emailAddress": "E-Mail-Addresse",
+      "mobileNumber": "Handy Nummer",
+      "country" : "Land",
+      "companyUrl" : "Firmen-URL",
+  "uploadPhoto": "Foto hochladen",
+  "dragAndDrop": "Drag & Drop",	  
+      "state": "Bundesland",
+      "city": "Stadt",
+      "zipCode": "Postleitzahl",
+      "myLinks": "Meine Links",
+      "invalidMobile": "ungültige Telefon-nummer",
+	  "save":"Speichern",
+	  "close":"Nah dran",
+	  "cancel":"Abbrechen",
+	  "yes":"Jawohl",
+	  "no":"Nein",
+	  "doYouSave":"Möchten Sie speichern ?",
+	  "addCustom":"Benutzerdefinierte Anforderungen hinzufügen",
+	  "next": "Nächste",
+      "previous": "Vorherige",
+      "submit": "einreichen",
+      "update": "Aktualisieren",
+      "updateNext": "Aktualisieren & Weiter",
+      "location": "Standort",
+      "status": "Status",
+      "appliedDate": "Angewendetes Datum",
+	  "jobTitle": "Berufsbezeichnung",
+      "postedDated": "Veröffentlichungsdatum",
+      "action": "Handlung",
+      "experience": "Erfahrung",
+	  "notAvailable":"Dieser Job ist nicht mehr verfügbar",
+	  "reasonJobChange":"Grund für die Änderung des Jobstatus",
+	  "backToJobs":"Zurück zu Jobs",
+      "travelRequired": "Reise erforderlich",
+      "viewOtherMatches": "Andere Spiele ansehen",
+      "matchOtherPosts": "Übereinstimmung mit anderen Beiträgen",
+      "jobsThatMatch": "Jobs, die passen",
+	  
+	  
+  "match": "Streichholz",
+  "pay": "Bezahlen",
+  "matchings": "Passendes",
+  "accountSetting": "Kontoeinstellung",
+  "notes": "Notizen",
+  "createProfile": "Profil erstellen",
+  "companyDetails": "Firmendaten",
+  "contactUs": "Kontaktieren Sie uns",
+  "addNotes": "Notizen hinzufügen",
+  "candidateProfile": "Profil der Kandidatenansicht",
+  "candidateMultipleJobMatches": "Kandidaten-Mehrfach-Job-Übereinstimmungen",
+  "mostMatched": "Zeige mir Profile, die am besten zu den besten passen in",
+  "statusMessage": "Statusmeldung",
+  "sendMessage": "Nachricht senden",
+  "postYourJob": "Veröffentlichen Sie Ihren Job",
+  "durationPlaceholder": "Beispiel: 6 Monate",
+  "duration": "Dauer",
+  "months": "in Monaten",
+  "contractDuration": "Vertragslaufzeit",
+  "enterNumberOfPositions": "Geben Sie die Anzahl der Positionen ein",
+  "validStatus": "Bitte wählen Sie den gültigen Status"
+
+	  
+  },
+  "profileSettings":{
+  "photo": "Profilbild",
+  "phone": "Telefonnummer",
+  "email": "E-Mail-ID",
+  "current_employer": "Aktueller Arbeitgeber",
+  "reference": "Referenz",
+  "available_for_opportunity": "Offen für Chancen"
+},
+  "header":{
+  "employer": "Arbeitgeber",
+  "jobseeker": "Arbeitssuchender",
+  "dashboard": "Instrumententafel",
+  "profile": "Profil",
+  "notification": "Benachrichtigung",
+  "settings": "Einstellungen",
+  "logout": "Logout"
+},
+  "nav":{
+  "matchingJobs": "Passende Jobs",
+  "postedJobs": "Veröffentlichte Jobs",
+  "matchingCandidates": "Passende Kandidaten",
+  "applicants": "Bewerber",
+  "applications": "Anträge",
+  "shortlisted": "In die engere Wahl gezogen",
+  "savedProfile": "Gespeichertes Profil",
+  "appliedJobs": "Angewandte Stellen",
+  "aboutCompany": "Über das Unternehmen",
+  "openJobs": "Offene Stellen",
+  "employees": "Mitarbeiter",
+  "myAttachments": "Meine Anhänge"
+},
+  "tabs":{
+  "matches": "Streichhölzer",
+  "jobsApplied": "Stellen beworben",
+  "myResumes": "MEINE ANHÄNGE",
+  "candidateName": "Name des Kandidaten",
+  "position": "Position",
+  "mobile": "Mobil",
+  "email": "E-Mail",
+  "jobDetails": "Stellendetails",
+  "feedback": "Feedback",
+  "jobInformation": "Job-Informationen",
+  "requirementCriteria": "Anforderungskriterien",
+  "otherPreference": "Andere Präferenz",
+  "message": "Nachricht"
+},
+  "userProfile":{
+	
+  "personalDetails": "Zur Person",
+  "educationExperience": "Ausbildung & Erfahrung",
+  "skillsets": "Kompetenzen",
+  "jobPreference": "Job-Präferenz",
+  "nationality": "Nationalität",
+  "relocate": "Standortwechsel",
+  "education": "Bildung",
+  "jobType": "Auftragstyp",
+  "availability": "Verfügbarkeit",
+  "languagesProficiency": "Sprachkenntnisse in",
+  "workAuthorisation": "Arbeitserlaubnis",
+  "iNeedVisaAponsorship": "Ich benötige ein Visumsponsoring",
+  "travel": "Reise",
+  "remote": "Abgelegen",
+  "jobRole": "Job-Rolle",
+  "uploadPhoto": "Foto hochladen",
+    
+  "uploadPhotoCompany": "Logo bearbeiten/ändern",
+  "visaSponsorship": "Visa-Sponsoring",
+  "needReferences": "Benötigen Sie Referenzen",
+  "dragAndDrop": "Drag & Drop",
+  "workAuthorisationIn": "Bevollmächtigt in",
+  "preferredLocation": "Bevorzugter Standort",
+  "experienceAndSkills": "ERFAHRUNG UND FÄHIGKEITEN ",
+  "totalYearsOfExp": "Insgesamt Jahre Erfahrung",
+  "totalYearsOfExperience": "Insgesamt Jahre Erfahrung",
+  "totalSapExp": "Sap-Erfahrung insgesamt",
+  "domainsWorked": "Domains funktionierten",
+  "domainExperience": "Domains Erfahrung",
+    
+  "handsOnExperience": "Praktische Erfahrung",
+  "knowledgeOn": "Wissen über",
+  "programmingSkills": "Programmierkenntnisse",
+  "others": "Andere",
+  "previousEmployers": "Frühere Arbeitgeber",
+  "languageKnown": "Sprache bekannt",
+  "endToEnd": "End-to-End-Implementierung",
+  "certifications": "BESCHEINIGUNGEN",
+  "certification": "Zertifizierung",
+  "reference": "Referenz",
+  "rolesLookingFor": "Rollen gesucht",
+  "addreference": "Verweis hinzufügen",
+	
+  "roleType": "Rollentyp",
+  "profilePreview": "Profilvorschau",
+  "degree": "Grad",
+  "fieldOfStudy": "Studienrichtung",
+  "yearOfCompletion": "Jahr der Fertigstellung",
+  "currentEmployer": "Aktueller Arbeitgeber",
+  "currentRole": "Aktuelle Rolle",
+  "arYouWillingToRelocate": "Sind Sie bereit, umzuziehen?",
+  "jobTypeError": "Bitte wählen Sie den Auftragstyp ",
+  "onlyRemote": "Nur Remote",
+  "visaSponsered": "Show me visum Gesponserte Jobs",
+  "iHaveWorkAuthorization": "Ich habe eine Arbeitserlaubnis",
+  "selectcountry": "Bitte wählen Sie das Land aus, in dem Sie arbeiten dürfen",
+	
+  "othercountry": "Anderes Land",
+  "handsOnWith": "Praktische Erfahrung",
+  "visatype": "Art des Visums",
+  "workAuthorization": "Arbeitsberechtigung",
+  "shouldBeACitizenPr": "Sollte ein Bürger / PR sein",
+  "shouldBeHavingAWorkPermit": "Sollte eine Arbeitserlaubnis haben",
+  "shouldBeHavingAWorkPermitOrWork": "Sollte ein Bürger / PR / Arbeitsmächtlich sein",
+  "otherSkills": "Sonstige Fähigkeiten",
+  "travelRequired": "Reise erforderlich",
+  "niceToHave": "Schön zu haben",
+  "startTime": "Startzeit",
+  "yearOfCompletionGraduation": "Jahr des Abschlusses"
+
+	
+  }, 
+  "matches":{
+  "shorttotalYearsOfExperience": "Gesamtjahre exp.",
+  "totalYearsOfSapExperience": "Insgesamt Jahre SAP-Erfahrung",
+  "totalYearsOfSapExperienceShort": "Total SAP Exp.",
+  "handsOnWithShort": "Hands on Exp.",
+  "workAuthorisationShort": "Arbeit Auth.",
+  "endToEndImplementationShort": "End-to-End-Imp."
+},
+  "jobs":{
+  "otherPreferences": "ANDERE PRÄFERENZEN",
+  "required": "Erforderlich",
+  "requiredSkils": "Erforderliche Fähigkeiten",
+  "niceToHave": "Schön zu haben",
+  "desired": "Gewünscht",
+  "perksBenfits": " Nützt",
+  "healthWellness": "Gesundheit ",
+  "officePerks": "Office-Vergünstigungen ",
+  "dentalInsurance": "Zahnversicherung",
+  "visionInsurance": "Vision Versicherung",
+  "healthInsurance": "Krankenversicherung",
+  "lifeInsurance": "Lebensversicherung",
+  "paidTimeOff": "Bezahlte Freizeit",
+  "vacationPolicy": "PTO / Urlaubspolitik",
+  "paidHolidays": "Bezahlter Urlaub",
+  "maternity": "Mutterschafts- / Vaterschaftsurlaub",
+  "financialBenefits": "Finanzielle Vorteile",
+  "retirementPlan": "Altersvorsorge",
+  "performanceBonus": "Leistungsbonus",
+  "tuitionReimbursement": "Rückerstattung von Studiengebühren",
+  "purchasePlan": "Mitarbeiter-Aktienkaufplan",
+  "freeFood": "Kostenloses Essen",
+  "homePolicy": "Richtlinie \"Von zu Hause aus arbeiten\"",
+  "petFriendly": "Haustierfreundlich",
+  "socialOutings": "Soziale Betriebs-Outings",
+  "officeSpace": "Einzigartige Büroflächen"
+
+  },
   "common": {
-    "yes": "Ja",
-    "no": "Nein",
-    "select": "Wählen",
-    "next": "Nächster",
-    "previous": "Bisherige",
-    "submit": "einreichen",
-    "apply": "Anwenden",
-    "message": "Botschaft",
-    "default": "Standard",
-    "addResume": "Lebenslauf hinzufügen"
-  },
-  "home": {
-    "title": "Stellen Sie Experten ein oder lassen Sie sich jederzeit für jeden Job einstellen",
-    "findCandidates": "Kandidaten finden",
-    "findJobs": "Arbeitsplätze finden",
-    "search": "Suche",
-    "postJob": "Post Job",
-    "postResume": "Lebenslauf hochladen",
-    "JobsByCountry": "Jobs nach Ländern",
-    "employer": "Arbeitgeberin",
-    "jobseeker": "Arbeitssuchender",
-    "staffingAgency": "Personalvermittlung",
-    "notes": "Anmerkungen",
-    "addNotes": "Notizen hinzufügen"
-  },
-  "postJob": {
-    "postYourJob": "Veröffentlichen Sie Ihren Job",
-    "jobInformation": "Job-Informationen",
-    "requirementCriteria": "Anforderungskriterien",
-    "jobTitle": "Berufsbezeichnung",
-    "jobType": "Auftragstyp",
-    "contractDuration": "Vertragslaufzeit",
-    "pay": "Zahlen",
-    "country": "Land",
-    "location": "Ort",
-    "availability": "Verfügbarkeit",
-    "remote": "Fernbedienung",
-    "jobDescription": "Arbeitsbeschreibung",
-    "totalYearsOfExperience": "Gesamterfahrung in Jahren",
-    "totalYearsOfSapExperience": "Insgesamt Jahre SAP-Erfahrung",
-    "domainExperience": "Domain-Erfahrung",
-    "handsOnWith": "Hands on mit",
-    "knowledgeOnOtherSapSkills": "Kenntnisse über andere SAP-Kenntnisse",
-    "programmingSkills": "Programmierkenntnisse",
-    "endToEndImplementation": "End-to-End-Implementierung",
-    "niceToHave": "Schön zu haben",
-    "certification": "Zertifizierung",
-    "workAuthorization": "Arbeitserlaubnis",
-    "shouldBeACitizenPr": "Sollte ein Bürger sein / PR",
-    "shouldBeHavingAWorkPermit": "Sollte eine Arbeitserlaubnis haben",
-    "travel": "Reise",
-    "visaSponsorship": "Visa-Sponsoring",
-    "sapModule": "SAP-Modul",
-    "exp": "Exp",
-    "jobPreview": "Jobvorschau",
-    "startTime": "Startzeit",
-    "willingToRelocate": "Umzugsbereitschaft",
-    "travelRequired": "Reise erforderlich",
-    "enterNumberOfPositions": "Geben Sie die Anzahl der Positionen ein",
-    "availableIn": "Verfügbar in",
-    "skills": "Kompetenzen",
-    "salary": "Gehalt"
-  },
-  "dashboard": {
-    "dashboard": "Instrumententafel",
-    "postedJobs": "Veröffentlichte Jobs",
-    "matches": "Streichhölzer",
-    "applicants": "Bewerberinnen",
-    "shortlisted": "Die engere Wahl",
-    "shortlist": "Auswahlliste",
-    "jobsApplied": "Jobs beworben",
-    "myResumes": "Meine Lebensläufe",
-    "aboutUs": "Über uns",
-    "savedProfile": "Gespeichertes Profil",
-    "applications": "Anwendungen",
-    "employer": "Arbeitgeberin",
-    "postedDated": "Gepostet vom",
-    "status": "Status",
-    "action": "Aktion",
-    "active": "Aktiv",
-    "paused": "Pause",
-    "closed": "Geschlossen",
-    "sortBy": "Sortieren nach",
-    "filter": "Filter",
-    "resume": "Fortsetzen",
-    "mail": "Mail",
-    "candidateName": "Name des Kandidaten",
-    "position": "Position",
-    "mobile": "Mobiltelefon",
-    "email": "Email",
-    "jobDetails": "Jobdetails",
-    "sendMail": "Mail senden",
-    "postJobDetailView": "Jobdetails veröffentlichen",
-    "edit": "Bearbeiten",
-    "description": "Beschreibung",
-    "yourPostJobs": "Ihre Post Jobs",
-    "candidateMatches": "Kandidaten-Matches",
-    "totalYearsOfExp": "Gesamtjahre von Exp",
-    "totalSapExp": "Gesamt SAP Exp",
-    "knowledgeOn": "Wissen über",
-    "matchOtherPosts": "Andere Beiträge abgleichen",
-    "score": "Ergebnis",
-    "domainsWorked": "Domänen funktionierten",
-    "profile": "Profil",
-    "visaSponsored": "Visa gesponsert",
-    "applied": "angewendet",
-    "iWillChooseWhileApplying": "Ich werde den Lebenslauf bei der Bewerbung auswählen",
-    "startDate": "Anfangsdatum",
-    "viewAll": "Alle ansehen",
-    "candidateViewJobs": "Kandidaten Jobs anzeigen",
-	"personalDetails":"Persönliche Daten",
-	"experienceAndSkills":"ERFAHRUNG UND FÄHIGKEITEN",
-	"certifications":"ZERTIFIZIERUNGEN",
-	"reference":"Referenz",
-	"others":"Andere"
-  },
+  "message": "Nachricht"
+},
+  "home":{
+  "title": "Stellen Sie Experten ein oder werden Sie für jeden Job und zu jeder Zeit eingestellt",
+  "findCandidates": "Kandidaten finden",
+  "findJobs": "Jobs finden",
+  "search": "Suchen",
+  "postJob": "Stellenanzeigen",
+  "postResume": "Veröffentlichen Sie Ihren Lebenslauf",
+  "JobsByCountry": "Jobs nach Ländern",
+  "employer": "Arbeitgeber",
+  "jobseeker": "Arbeitssuchender",
+  "staffingAgency": "Personalagentur"
+},
+  "postJob":{
+  "postYourJob": "Stellenangebote veröffentlichen"
+},
   "postYourResume": {
-    "candidateRegistration": "Kandidaten Registrierung",
-    "personalDetails": "Persönliche Daten",
-    "educationExperience": "Bildung & Erfahrung",
-    "skillsets": "Fähigkeiten",
-    "jobPreference": "Job Präferenz",
-    "firstName": "Zuerst Name",
-    "lastName": "Letzte Name",
-    "emailAddress": "E-Mail-Addresse",
-    "mobileNumber": "Handynummer",
-    "country" : "Land",
-    "state": "Zustand",
-    "City": "Stadt",
-    "zipCode": "Postleitzahl",
-    "myLinks": "Meine Links",
-    "enterLinkedinUrl": "Geben Sie die Linkedin-URL ein",
-    "enterGithubUrl": "Geben Sie die Github-URL ein",
-    "enterYoutubeUrl": "Geben Sie die YouTube-URL ein",
-    "enterBlogUrl": "Geben Sie die Blog-URL ein",
-    "enterPortfolioUrl": "Geben Sie die Portfolio-URL ein",
-    "show": "Show",
-    "uploadPhoto": "Foto hochladen",
-    "dragAndDrop": "Drag and Drop",
-    "education": "Bildung",
-    "degree": "Grad",
-    "fieldOfStudy": "Forschungsbereich",
-    "yearOfCompletion": "Jahr der Fertigstellung",
-    "experience": "Erfahrung",
-    "currentEmployer": "Aktueller Arbeitgeber",
-    "currentRole": "Momentane Rolle",
-    "DomainsWorked": "Domänen funktionierten",
-    "clientsWorkedWith": "Kunden arbeiteten mit",
-    "previousEmployers": "Frühere Arbeitgeber",
-    "handsOnExperience": "Praxiserfahrung",
-    "others": "Andere",
-    "rolesLookingFor": "Rollen auf der Suche nach",
-    "preferredLocation": "Bevorzugter Ort",
-    "iHaveWorkAuthorization": "Ich habe eine Arbeitserlaubnis",
-    "iNeedVisaAponsorship": "Ich brauche Visa-Sponsoring",
-    "arYouWillingToRelocate": "Sind Sie umzugsbereit",
-    "onlyRemote": "Nur Remote",
-    "sapCategory": "SAP Kategorie",
-    "nationality": "Staatsangehörigkeit",
-    "previousemployers": "Previous Employers",
-    "selectcountry": "Frühere Arbeitgeber",
-    "othercountry": "Anderes Land",
-    "visatype": "Visa type",
-    "visatype": "Visumtyp",
-    "read": "Lesen",
-    "write": "Schreiben",
-    "speak": "Sprechen",
-    "addreference": "Füge Referenz hinzu"
-  }
+  "candidateRegistration": "Kandidatenregistrierung",
+  "myLinks": "Meine Links",
+  "enterLinkedinUrl": "LinkedIn-URL eingeben",
+  "enterGithubUrl": "Geben Sie die github-URL ein",
+  "enterYoutubeUrl": "Youtube-URL eingeben",
+  "enterBlogUrl": "Blog-URL eingeben",
+  "enterPortfolioUrl": "Portfolio-URL eingeben"
+}
 }
