--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -1,22 +1,289 @@
 {
-	"demo.greeting": "Hello {{name}}!",
-	"demo.text": "This is a simple demonstration app for ngx-translate",
-	"demo.text-in-code": "Translation used from code",
-  "demo.title": "Translation demo",
+  "shared":{
+	  "uploadResume":"Upload Resume",
+	  "uploadTitle":"Please upload your resume. Click the below button to redirect resume upload page.",
+      "iWillChooseWhileApplying": "I will choose the resume while applying",
+	  "later":"Later",
+	  "upload":"Upload",
+	  "uploadSuccess":"Great, you have a new match!!",
+	  "ok":"Ok",
+	  "jobDesc":"Job Description",
+	  "download":"Download",
+	  "goMatches":"Go to Matches",
+	  "greeting":"Hello",
+	  "totalMatches":"Total No of Matches",
+	  "byLocation":"Job by Location",
+	  "byAvailability":"By Availability",
+	  "jobPosted":"Job Posted",
+	  "byJobType":"By Job Type",
+      "default": "Default",
+	  "byVisa":"Visa Sponsord Jobs" ,
+	  "coverLetter":"Cover Lettter",
+	  "addCover":"Add cover",
+	  "addCoverTitle":" Cover Tilte",
+      "resume": "Resume",
+      "add": "Add",
+	  "addResume":"Add Resume",
+	  "addResumeTitle":" Resume Tilte",
+	  "matches":"Matches",
+	  "sendMail":"Send Mail",
+	  "chooseJobs":"Choose Jobs",
+	  "profileSetting":"Profile Settings",
+	  "show":"Show",
+	  "hide":"Hide",
+	  "hired":"Hired",
+	  "jobsNotFound":"No Jobs Found",
+	  "filter":"Filter",
+	  "clear":"Clear",
+	  "experience":"Experience",
+	  "jobType":"Job Type",
+	  "salary":"Salary",
+	  "sapSkills":"SAP Skills",
+	  "applied":"Applied",
+	  "description":"Description",
+	  "apply":"Apply",
+	  "missing":"Missing",
+	  "moreSkills":"More Skills",
+	  "applyNow":"Apply Now",
+	  "candidateMatches":"Candidate Matches",
+      "salary": "Pay",
+	  "score":"SCORE",
+	  "viewAll":"View all",
+      "aboutUs": "About Us",
+		"dragAndDrop": "Drag and Drop",
+    "uploadPhoto": "Upload Photo",
+      "jobPreview": "Job Preview",
+      "candidateViewJobs": "Candidate View Jobs",
+	  "youHave":"You have",
+	  "closed":"Closed",
+	  "read": "Read",
+	  "write": "Write",
+	  "speak": "Speak",
+	  "active": "Active",
+      "paused": "Paused",
+      "closed": "Closed",
+	  "edit":"Edit",
+	  "name":"Name",
+	  "email":"Email",
+      "search": "Search",
+	  "companyName":"Company Name",
+	  "select":"Select",
+	  "saveClose":"Save & Close",
+	  "showMatches":"Show Matches",
+	  "screeningProcess":"Screening Process",
+	  "otherPost":"Other Post",
+	  "firstName": "First Name",
+      "lastName": "Last Name",
+      "emailAddress": "Email Address",
+      "mobileNumber": "Mobile Number",
+      "country" : "Country",
+      "companyUrl" : "Company Url",
+      "state": "State",
+      "city": "City",
+      "zipCode": "Zip Code",
+      "myLinks": "My Links",
+      "invalidMobile": "Invalid mobile number",
+	  "save":"Save",
+	  "close":"Close",
+	  "cancel":"Cancel",
+	  "yes":"Yes",
+	  "no":"No",
+	  "doYouSave":"Do you want to Save ?",
+	  "addCustom":"Add Custom Requirements",
+	  "next": "Next",
+      "previous": "Previous",
+      "submit": "Submit",
+      "update": "Update",
+      "updateNext": "Update & Next",
+      "location": "Location",
+      "status": "Status",
+      "appliedDate": "Applied Date",
+	  "jobTitle": "Job Title",
+      "postedDated": "Posted Date",
+      "action": "Action",
+      "experience": "Experience",
+	  "notAvailable":"This job is not available anymore",
+	  "reasonJobChange":"Reason for job status change",
+	  "backToJobs":"Back To Jobs",
+      "travelRequired": "Travel Required",
+      "viewOtherMatches": "View Other Matches",
+      "matchOtherPosts": "Match Other Posts",
+      "jobsThatMatch": "Jobs that Match",
+      "match": "Match",
+      "pay": "Pay",
+      "matchings": "Matchings",
+      "accountSetting": "Account Setting",
+      "notes": "Notes",
+      "createProfile": "Create Profile",
+      "companyDetails": "Company Details",
+      "contactUs": "Contact Us",
+      "addNotes": "Add Notes",
+      "candidateProfile": "Candidate View Profile",
+      "candidateMultipleJobMatches": "Candidate Multiple Job Matches",
+	  "mostMatched":"Show me profiles matching the most in",
+	  "statusMessage":"Status Message",
+	  "sendMessage":"Send Message",
+      "postYourJob": "Post your Job",
+      "durationPlaceholder": "Ex: 6 months",
+      "duration": "Duration",
+      "months": "in months",
+      "contractDuration": "Contract Duration",
+      "enterNumberOfPositions": "Enter Number of Positions",
+	  "validStatus":"Please select the valid status"
+	  
+  },
+  "profileSettings":{
+	  "photo":"Profile Image",
+	  "phone":"Phone Numer",
+	  "email":"Email ID",
+	  "current_employer":"Current Employer",
+	  "reference":"Reference",
+	  "available_for_opportunity":"Open to Opportunity"	  
+  },
+  "header":{
+	  "employer": "Employer",
+	  "jobseeker": "Jobseeker",
+	  "dashboard": "Dashboard",
+      "profile": "Profile",
+      "notification": "Notification",
+      "settings": "Settings",
+      "logout": "Logout" 
+  },
+  "nav":{
+	  "matchingJobs":"Matching Jobs",
+	  "postedJobs":"Posted Jobs",
+	  "matchingCandidates":"Matching Candidates",
+	  "applicants":"Applicants",
+	  "applications":"Applications",
+	  "shortlisted":"Shortlisted",
+	  "savedProfile":"Saved Profile",
+	  "appliedJobs":"Applied Jobs",
+	  "aboutCompany":"About Company",
+	  "openJobs":"Open Jobs",
+	  "employees":"Employees",
+	  "myAttachments":"My Attachments"
+  },
+  "tabs":{
+	"matches": "Matches",
+    "jobsApplied": "Jobs Applied",
+    "myResumes": "MY ATTACHMENTS" ,
+    "candidateName": "Candidate Name",
+    "position": "Position",
+    "mobile": "Mobile",
+    "email": "Email",
+    "jobDetails": "Job Details",
+    "feedback": "Feedback",
+    "jobInformation": "Job Information",
+    "requirementCriteria": "Requirement Criteria",
+    "otherPreference": "Other Preference",
+	"message": "Message"
+  },
+  "userProfile":{
+	"personalDetails":"Personal Details",
+	"educationExperience":"Education & Experience",
+	"skillsets":"Skillsets",
+	"jobPreference":"Job Preference",
+	"nationality":"Nationality",
+    "relocate": "Relocation", 
+	"education":"Education",
+    "jobType": "Job Type",
+    "availability": "Availability", 
+    "languagesProficiency": "Languages Proficiency in",
+	"workAuthorisation":"Work Authorisation",
+    "iNeedVisaAponsorship": "I need visa sponsorship",
+    "travel": "Travel",
+    "remote": "Remote",
+    "jobRole": "Job Role", 
+    "uploadPhoto": "Upload Photo",
+    "uploadPhotoCompany": "Edit/Change Logo",
+    "visaSponsorship": "Visa Sponsorship",
+    "needReferences": "Need References",
+    "dragAndDrop": "Drag and Drop",
+	"workAuthorisationIn":"Authorised to work in",
+	"preferredLocation":"Preferred Location",
+	"experienceAndSkills":"EXPERIENCE AND SKILLS ",
+    "totalYearsOfExp": "Total Years of Experience",
+    "totalYearsOfExperience": "Total Years of Experience",
+    "totalSapExp": "Total SAP Experience",
+    "domainsWorked": "Domains Worked",
+    "domainExperience": "Domains Experience",
+    "handsOnExperience": "Hands on Experience",
+    "knowledgeOn": "Knowledge on",
+    "programmingSkills": "Programming Skills",
+    "others": "Others",
+    "previousEmployers": "Previous Employers",
+	"languageKnown":"Language Known",
+	"endToEnd":"End to End Implementation",
+	"certifications":"CERTIFICATIONS",
+	"certification":"Certification",
+	"reference":"Reference",
+    "rolesLookingFor": "Roles Looking for",    
+	"addreference": "Add Reference",
+	"roleType": "Role Type",
+	"profilePreview":"Profile Preview",
+	"degree":"Degree",
+    "fieldOfStudy": "Field of Study",
+    "yearOfCompletion": "Year of completion",
+    "currentEmployer": "Current Employer",
+    "currentRole": "Current Role",
+    "arYouWillingToRelocate": "Are you willing to relocate",
+    "jobTypeError": "Please Select the job type ",
+    "onlyRemote": "Only Remote",
+	"visaSponsered":"Show me visa Sponsored jobs",
+    "iHaveWorkAuthorization": "I have work authorization",
+    "selectcountry": "Please select the country you are authorized to work",
+	"othercountry": "Other Country",
+    "handsOnWith": "Hands on experience",
+    "visatype": "Visa type",
+    "workAuthorization": "Work Authorization",
+    "shouldBeACitizenPr": "Should be a Citizen / PR",
+    "shouldBeHavingAWorkPermit": "Should be having a Work Permit",
+    "shouldBeHavingAWorkPermitOrWork": "Should be a Citizen / PR / Authorized to Work",
+    "otherSkills": "Other Skills",
+    "travelRequired": "Travel Required",
+	"niceToHave": "Nice to have",
+    "startTime": "Start Time",
+    "yearOfCompletionGraduation": "Year of Graduation"
+	
+  }, 
+  "matches":{
+    "shorttotalYearsOfExperience": "Total Years of Exp.",
+    "totalYearsOfSapExperience": "Total Years of SAP Experience",
+    "totalYearsOfSapExperienceShort": "Total SAP Exp.",
+    "handsOnWithShort": "Hands on Exp.",
+    "workAuthorisationShort": "Work Auth.",
+    "endToEndImplementationShort": "End To End Imp."
+  },
+  "jobs":{
+      "otherPreferences": "OTHER PREFERENCES",
+	  "required": "Required",
+	  "requiredSkils": "Required Skills",
+	  "niceToHave": "Nice to have",
+	  "desired": "Desired",
+	  "perksBenfits": " Benefits",
+	  "healthWellness": "Health ",
+	  "officePerks": "Office Perks ",
+	  "dentalInsurance": "Dental Insurance",
+      "visionInsurance": "Vision Insurance",
+	  "healthInsurance": "Health Insurance",
+	  "lifeInsurance": "Life Insurance",
+	  "paidTimeOff": "Paid Time Off",
+	  "vacationPolicy": "PTO / Vacation Policy",
+	  "paidHolidays": "Paid Holidays",
+	  "maternity": "Maternity / Paternity Leave",
+	  "financialBenefits": "Financial Benefits",
+	  "retirementPlan": "Retirement Plan",
+	  "performanceBonus": "Performance Bonus",
+	  "tuitionReimbursement": "Tuition Reimbursement",
+	  "purchasePlan": "Employee Stock Purchase Plan",
+	  "freeFood": "Free Food",
+	  "homePolicy": "Work From Home Policy",
+	  "petFriendly": "Pet-Friendly",
+	  "socialOutings": "Company Social Outings",
+	  "officeSpace": "Unique Office Space"
+  },
   "common": {
-    "yes": "Yes",
-    "no": "No",
-    "select": "Select",
-    "next": "Next",
-    "previous": "Previous",
-    "submit": "Submit",
-    "apply": "Apply",
-    "message": "Message",
-    "default": "Default",
-    "addResume": "Add Resume",
-    "resume": "Add Resume",
-    "coverLetter": "Cover Letter",
-    "addCover": "Add Letter"
+    "message": "Message"
   },
   "home": {
     "title": "Hire experts or be hired for any job, any time",
@@ -28,216 +295,18 @@
     "JobsByCountry": "Jobs by country",
     "employer": "Employer",
     "jobseeker": "Jobseeker",
-    "staffingAgency": "Staffing Agency",
-    "notes": "Notes",
-    "addNotes": "Add Notes"
+    "staffingAgency": "Staffing Agency"
   },
-  "postJob": {
-    "relocate": "Relocation",
-    "endToEndImplementationShort": "End To End Imp.",
-    "workAuthorisationShort": "Work Auth.",
-    "handsOnWithShort": "Hands on Exp.",
-    "totalYearsOfSapExperienceShort": "Total SAP Exp.",
-    "shorttotalYearsOfExperience": "Total Years of Exp.",
-    "authorizedToWork": "Authorized To Work",
-	"extraCriteria":"Extra Criteria",
-	"extraCriteria":"Extra Criteria",
-	"education":"Education",
-	"workAuthorisation":"Work Authorisation",
-	"desiredSkills":"DESIRED SKILLS",
-    "languageknown": "Languages Known",
-    "shouldBeACitizenPrWork": "Should be a Citizen / PR / Authorized to Work",
-    "clientFacing": "Client Facing Role",
-    "trainingExperience": "Training Experience",
-    "required": "Required",
-    "notRequired": "Not Required",
-    "perksBenfits": " Benefits",
-    "healthWellness": "Health ",
-    "dentalInsurance": "Dental Insurance",
-    "visionInsurance": "Vision Insurance",
-    "healthInsurance": "Health Insurance",
-    "lifeInsurance": "Life Insurance",
-    "paidTimeOff": "Paid Time Off",
-    "vacationPolicy": "PTO / Vacation Policy",
-    "paidHolidays": "Paid Holidays",
-    "maternity": "Maternity / Paternity Leave",
-    "financialBenefits": "Financial Benefits",
-    "retirementPlan": "Retirement Plan",
-    "performanceBonus": "Performance Bonus",
-    "tuitionReimbursement": "Tuition Reimbursement",
-    "purchasePlan": "Employee Stock Purchase Plan",
-    "freeFood": "Free Food",
-    "homePolicy": "Work From Home Policy",
-    "petFriendly": "Pet-Friendly",
-    "socialOutings": "Company Social Outings",
-    "officeSpace": "Unique Office Space",
-    "postYourJob": "Post your Job",
-    "durationPlaceholder": "Ex: 6 months",
-    "duration": "Duration",
-    "months": "in months",
-    "jobInformation": "Job Information",
-    "requirementCriteria": "Requirement Criteria",
-    "jobTitle": "Job Title",
-    "jobType": "Job Type",
-    "jobRole": "Job Role", 
-    "contractDuration": "Contract Duration",
-    "pay": "Pay",
-    "country": "Country",
-    "location": "Location",
-    "availability": "Availability",
-    "remote": "Remote",
-    "jobDescription": "Job Description",
-    "totalYearsOfExperience": "Total Years of Experience",
-    "totalYearsOfSapExperience": "Total Years of SAP Experience",
-    "domainExperience": "Domain Experience",
-    "handsOnWith": "Hands on experience",
-    "handsOnExp": "Hands on exp",
-    "knowledgeOnOtherSapSkills": "Other SAP skills",
-    "programmingSkills": "Programming Skills",
-    "endToEndImplementation": "End to End Implementation",
-    "niceToHave": "Nice to have",
-    "certification": "Certification",
-    "workAuthorization": "Work Authorization",
-    "shouldBeACitizenPr": "Should be a Citizen / PR",
-    "shouldBeHavingAWorkPermit": "Should be having a Work Permit",
-    "travel": "Travel",
-    "visaSponsorship": "Visa Sponsorship",
-    "sapModule": "SAP Module",
-    "exp": "Exp",
-    "jobPreview": "Job Preview",
-    "startTime": "Start Time",
-    "willingToRelocate": "Willing to Relocate",
-    "travelRequired": "Travel Required",
-    "enterNumberOfPositions": "Enter Number of Positions",
-    "availableIn": "Available In",
-    "skills": "Skills",
-	"experienceAndSkills":"EXPERIENCE AND SKILLS ",
-	"visaSponsered":"Show me visa Sponsored jobs",
-    "salary": "Pay"
-  },
-  "dashboard": {
-    "dashboard": "Dashboard",
-    "otherPreferences": "OTHER PREFERENCES",
-	"desiredSkills":"DESIRED SKILLS",
-    "programmingSkills": "Programming Skills",
-    "otherSkills": "Other Skills",
-    "postedJobs": "Posted Jobs",
-    "matches": "Matches",
-    "applicants": "Applicants",
-    "shortlisted": "Shortlisted",
-    "shortlist": "Shortlist",
-    "aboutUs": "About Us",
-    "savedProfile": "Saved Profile",
-    "applications": "Applications",
-    "employer": "Employer",
-    "postedDated": "Posted Date",
-    "status": "Status",
-    "action": "Action",
-    "active": "Active",
-    "paused": "Paused",
-    "closed": "Closed",
-    "sortBy": "Sort by",
-    "filter": "Filter",
-    "resume": "Resume",
-    "jobsApplied": "Jobs Applied",
-    "myResumes": "MY ATTACHMENTS",
-    "mail": "Mail",
-    "candidateName": "Candidate Name",
-    "position": "Position",
-    "mobile": "Mobile",
-    "email": "Email",
-    "jobDetails": "Job Details",
-    "sendMail": "Send Mail",
-    "postJobDetailView": "Post Job Details",
-    "edit": "Edit",
-    "description": "Description",
-    "yourPostJobs": "Your Post Jobs",
-    "candidateMatches": "Candidate Matches",
-    "totalYearsOfExp": "Total Years of Experience",
-    "totalSapExp": "Total SAP Experience",
-    "knowledgeOn": "Knowledge on",
-    "matchOtherPosts": "Match Other Posts",
-    "score": "Score",
-    "domainsWorked": "Domains Worked",
-    "profile": "Profile",
-    "visaSponsored": "Visa Sponsored",
-    "applied": "applied",
-    "iWillChooseWhileApplying": "I will choose the resume while applying",
-    "startDate": "Start Date",
-    "viewAll": "View All",
-    "candidateViewJobs": "Candidate View Jobs",
-	"personalDetails":"Personal Details",
-	"experienceAndSkills":"EXPERIENCE AND SKILLS ",
-	"certifications":"CERTIFICATIONS",
-	"reference":"Reference",
-	"others":"Others Skills",
-	"nationality":"Nationality",
-	"relocation":"Relocation",
-	"jobType":"Job type looking for",
-	"availability":"Availability",
-	"workAuthorisation":"Work Authorisation",
-	"workAuthorisationIn":"Authorised to work in",
-	"preferredLocation":"Preferred Location",
-	"languageKnown":"Language Known",
-	"education":"Education"
+  "postJob":{
+	  "postYourJob":"Post Jobs"
   },
   "postYourResume": {
-    "candidateRegistration": "Candidate Registration",
-    "authorizedToWork": "Authorized To Work",
-    "personalDetails": "Personal Details",
-    "educationExperience": "Education & Experience",
-    "skillsets": "Skillsets",
-    "jobPreference": "Job Preference",
-    "firstName": "First Name",
-    "lastName": "Last Name",
-    "emailAddress": "Email Address",
-    "mobileNumber": "Mobile Number",
-    "country" : "Country",
-    "state": "State",
-    "city": "City",
-    "zipCode": "Zip Code",
+	"candidateRegistration": "Candidate Registration",
     "myLinks": "My Links",
     "enterLinkedinUrl": "Enter linkedin url",
     "enterGithubUrl": "Enter github url",
     "enterYoutubeUrl": "Enter youtube url",
     "enterBlogUrl": "Enter blog url",
-    "enterPortfolioUrl": "Enter portfolio url",
-    "show": "Show",
-    "uploadPhoto": "Upload Photo",
-    "uploadPhotoCompany": "Edit/Change Logo",
-    "dragAndDrop": "Drag and Drop",
-    "education": "Education",
-    "degree": "Degree",
-    "fieldOfStudy": "Field of Study",
-    "yearOfCompletion": "Year of completion",
-    "yearOfCompletionGraduation": "Year of Graduation",
-    "experience": "Experience",
-    "currentEmployer": "Current Employer",
-    "currentRole": "Current Role",
-    "DomainsWorked": "Domains Worked",
-    "clientsWorkedWith": "Clients worked with",
-    "previousEmployers": "Previous Employers",
-    "handsOnExperience": "Hands on Experience",
-    "others": "Others",
-    "rolesLookingFor": "Roles Looking for",
-    "preferredLocation": "Preferred Location",
-    "iHaveWorkAuthorization": "I have work authorization",
-    "iNeedVisaAponsorship": "I need visa sponsorship",
-    "arYouWillingToRelocate": "Are you willing to relocate",
-    "onlyRemote": "Only Remote",
-    "sapCategory": "SAP Category",
-    "nationality": "Nationality",
-    "previousemployers": "Previous Employers",
-    "selectcountry": "Please select the country you are authorized to work",
-    "othercountry": "Other Country",
-    "visatype": "Visa type",
-    "languageknown": "Languages Known",
-    "read": "Read",
-    "write": "Write",
-    "speak": "Speak",
-    "addreference": "Add Reference",
-    "roleType": "Role Type",
-    "remote": "Remote"
-	
+    "enterPortfolioUrl": "Enter portfolio url"
   }
 }
