--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -1,171 +1,312 @@
 {
-	"demo.greeting": "Hello {{name}}!",
-	"demo.text": "This is a simple demonstration app for ngx-translate",
-	"demo.text-in-code": "Translation used from code",
-  "demo.title": "Translation demo",
+  "shared": {
+    "uploadResume": "Subir currículum",
+    "uploadTitle": "Por favor, sube tu currículum. Haga clic en el botón de abajo para redirigir la página de carga de currículum.",
+    "iWillChooseWhileApplying": "Elegiré el currículum mientras aplico",
+    "later": "Más tarde",
+    "upload": "Subir",
+    "uploadSuccess": "¡¡Genial, tienes un nuevo partido!!",
+  "uploadPhoto": "Subir foto",
+    "ok": "De acuerdo",
+    "download": "Descargar",
+    "jobDesc": "Descripción del trabajo",
+    "goMatches": "Ir a Partidos",
+    "greeting": "Hola",
+    "totalMatches": "Número total de partidos",
+    "byLocation": "Trabajo por ubicación",
+    "byAvailability": "Por disponibilidad",
+    "jobPosted": "Trabajo publicado",
+    "byJobType": "Por tipo de trabajo",
+    "default": "Predeterminado",
+    "byVisa": "Trabajos patrocinados por Visa",
+	  "coverLetter": "Tapa Lettter",
+	  "addCover": "Añadir portada",
+	  "addCoverTitle": " Cubierta Basculante",
+	  "resume": "Reanudar",
+	  "add": "Agregar",
+	  "addResume": "Agregar currículum",
+	  "addResumeTitle": " Reanudar Tilte",
+	  "matches": "Partidos",
+	  "sendMail": "Enviar correo",
+	  "chooseJobs": "Elija trabajos",
+	  "profileSetting": "Configuración del perfil",
+	  "show": "Mostrar",
+	  "hide": "Esconder",
+	  "hired": "Contratado",
+	  "jobsNotFound": "No se han encontrado trabajos",
+	  "filter": "Filtro",
+  "clear": "Claro",
+  "experience": "Experiencia",
+  "jobType": "Tipo de trabajo",
+  "salary": "Pagar",
+  "sapSkills": "Habilidades de SAP",
+  "applied": "Aplicado",
+  "description": "Descripción",
+  "apply": "Aplicar",
+  "missing": "Desaparecido",
+  "moreSkills": "Más habilidades",
+  "applyNow": "Aplicar ahora",
+  "candidateMatches": "Coincidencias de candidatos",
+  "score": "PUNTUACIÓN",
+  "viewAll": "Ver todo",
+  "aboutUs": "Sobre nosotros",
+  "jobPreview": "Vista previa del trabajo",
+  "candidateViewJobs": "Candidato Ver trabajos",
+  "youHave": "Tienes",
+  "closed": "Cerrado",
+  "read": "Leer",
+  "dragAndDrop": "Arrastrar y soltar",
+  "write": "Escribir",
+  "speak": "Hablar",
+  "active": "Activo",
+  "paused": "Pausa",
+  "edit": "Editar",
+  "name": "Nombre",
+  "email": "Correo electrónico",
+  "search": "Buscar",
+  "companyName": "Nombre de la empresa",
+  "select": "Escoger",
+  "saveClose": "Guardar y cerrar",
+  "showMatches": "Mostrar partidos",
+  "screeningProcess": "Proceso de selección",
+  "otherPost": "Otro Post",
+  "firstName": "Nombre",
+  "lastName": "Apellido",
+  "emailAddress": "Dirección de correo electrónico",
+  "mobileNumber": "Número de teléfono móvil",
+  "country": "País",
+  "companyUrl": "URL de la empresa",
+  "state": "Estado",
+  "city": "Ciudad",
+  "zipCode": "Código postal",
+  "myLinks": "Mis enlaces",
+  "invalidMobile": "Número de teléfono móvil no válido",
+  "save": "Salvar",
+  "close": "Cerrar",
+  "cancel": "Cancelar",
+  "yes": "Sí",
+  "no": "No",
+  "doYouSave": "¿Quieres ahorrar?",
+  "addCustom": "Agregar requisitos personalizados",
+  "next": "Próximo",
+  "previous": "Anterior",
+  "submit": "Enviar",
+  "update": "Actualizar",
+  "updateNext": "Actualización y Siguiente",
+  "location": "Ubicación",
+  "status": "Estado",
+  "appliedDate": "Fecha de aplicación",
+  "jobTitle": "Título del trabajo",
+  "postedDated": "Fecha de publicación",
+  "action": "Acción",
+  "notAvailable": "Este trabajo ya no está disponible",
+  "reasonJobChange": "Motivo del cambio de estado del trabajo",
+  "backToJobs": "Volver a Empleos",
+  "travelRequired": "Viaje requerido",
+  "viewOtherMatches": "Ver otros partidos",
+  "matchOtherPosts": "Hacer coincidir otras publicaciones",
+  "jobsThatMatch": "Trabajos que coinciden",
+  "match": "Cerilla",
+  "pay": "Pagar",
+  "matchings": "Coincidencias",
+  "accountSetting": "Configuración de la cuenta",
+  "notes": "Notas",
+  "createProfile": "Crear perfil",
+  "companyDetails": "Datos de la empresa",
+  "contactUs": "Contáctenos",
+  "addNotes": "Agregar notas",
+  "candidateProfile": "Perfil de vista del candidato",
+  "candidateMultipleJobMatches": "Candidato Múltiples coincidencias de trabajo",
+  "mostMatched": "Mostrarme perfiles que coincidan más en",
+  "statusMessage": "Mensaje de estado",
+  "sendMessage": "Enviar mensaje",
+  "postYourJob": "Publica tu trabajo",
+  "durationPlaceholder": "Ej: 6 meses",
+  "duration": "Duración",
+  "months": "en meses",
+  "contractDuration": "Duración del contrato",
+  "enterNumberOfPositions": "Introduzca el número de posiciones",
+  "validStatus": "Seleccione el estado válido"
+  },
+  "profileSettings": {
+  "photo": "Imagen de perfil",
+  "phone": "Número de teléfono",
+  "email": "ID de correo electrónico",
+  "current_employer": "Empleador actual",
+  "reference": "Referencia",
+  "available_for_opportunity": "Abierto a oportunidades"
+
+  },
+  "header":{
+  "employer": "Empleador",
+  "jobseeker": "Solicitante de empleo",
+  "dashboard": "Salpicadero",
+  "profile": "Perfil",
+  "notification": "Notificación",
+  "settings": "Configuración",
+  "logout": "Cerrar sesión"
+} ,
+  "nav": {
+  "matchingJobs": "Trabajos coincidentes",
+  "postedJobs": "Empleos publicados",
+  "matchingCandidates": "Emparejamiento de candidatos",
+  "applicants": "Solicitantes",
+  "applications": "Aplicaciones",
+  "shortlisted": "Preseleccionados",
+  "savedProfile": "Perfil guardado",
+  "appliedJobs": "Trabajos Aplicados",
+  "aboutCompany": "Acerca de la empresa",
+  "openJobs": "Empleos abiertos",
+  "employees": "Empleados",
+  "myAttachments": "Mis archivos adjuntos"
+  },
+  "tabs": {
+  "matches": "Partidos",
+  "jobsApplied": "Trabajos Aplicados",
+  "myResumes": "MIS ARCHIVOS ADJUNTOS",
+  "candidateName": "Nombre del candidato",
+  "position": "Posición",
+  "mobile": "Móvil",
+  "email": "Correo electrónico",
+  "jobDetails": "Detalles del trabajo",
+  "feedback": "Retroalimentación",
+  "jobInformation": "Información de trabajo",
+  "requirementCriteria": "Criterios de requisitos",
+  "otherPreference": "Otra preferencia",
+  "message": "Mensaje"    
+  },
+  "userProfile": {
+  "personalDetails": "Datos personales",
+  "educationExperience": "Educación y Experiencia",
+  "skillsets": "Conjuntos de habilidades",
+  "jobPreference": "Preferencia de trabajo",
+  "nationality": "Nacionalidad",
+  "relocate": "Reubicación",
+  "education": "Educación",
+  "jobType": "Tipo de trabajo",
+  "availability": "Disponibilidad",
+  "languagesProficiency": "Dominio de idiomas",
+  "workAuthorisation": "Autorización de trabajo",
+  "iNeedVisaAponsorship": "Necesito patrocinio de visa",
+  "travel": "Viajar",
+  "remote": "Remoto",
+  "jobRole": "Rol de trabajo",
+  "uploadPhoto": "Subir foto",
+  "uploadPhotoCompany": "Editar/Cambiar logotipo",
+  "visaSponsorship": "Patrocinio de Visa",
+  "needReferences": "Necesita referencias",
+  "dragAndDrop": "Arrastrar y soltar",
+  "workAuthorisationIn": "Autorizado para trabajar en",
+  "preferredLocation": "Ubicación preferida",
+  "experienceAndSkills": "EXPERIENCIA Y HABILIDADES ",
+  "totalYearsOfExp": "Total de años de experiencia",
+  "totalYearsOfExperience": "Total de años de experiencia",
+  "totalSapExp": "Experiencia total de SAP",
+  "domainsWorked": "Dominios trabajados",
+  "domainExperience": "Experiencia de dominios",
+  "handsOnExperience": "Experiencia práctica",
+  "knowledgeOn": "Conocimiento sobre",
+  "programmingSkills": "Habilidades de programación",
+  "others": "Otros",
+  "previousEmployers": "Empleadores anteriores",
+  "languageKnown": "Idioma conocido",
+  "endToEnd": "Implementación de extremo a extremo",
+  "certifications": "CERTIFICACIONES",
+  "certification": "Certificación",
+  "reference": "Referencia",
+  "rolesLookingFor": "Roles en busca de",
+  "addreference": "Agregar referencia",
+  "roleType": "Tipo de rol",
+  "profilePreview": "Vista previa del perfil",
+  "degree": "Grado",
+  "fieldOfStudy": "Campo de estudio",
+  "yearOfCompletion": "Año de finalización",
+  "currentEmployer": "Empleador actual",
+  "currentRole": "Rol actual",
+  "arYouWillingToRelocate": "¿Estás dispuesto a mudarte?",
+  "jobTypeError": "Seleccione el tipo de trabajo ",
+  "onlyRemote": "Solo remoto",
+  "visaSponsered": "Muéstrame visa Trabajos patrocinados",
+  "iHaveWorkAuthorization": "Tengo autorización de trabajo",
+  "selectcountry": "Seleccione el país en el que está autorizado a trabajar",
+  "othercountry": "Otro país",
+  "handsOnWith": "Experiencia práctica",
+  "visatype": "Tipo de visado",
+  "workAuthorization": "Autorización de trabajo",
+  "shouldBeACitizenPr": "Debe ser un ciudadano / PR",
+  "shouldBeHavingAWorkPermit": "Debería tener un permiso de trabajo",
+  "shouldBeHavingAWorkPermitOrWork": "Debe ser un ciudadano / PR / autorizado para trabajar",
+  "otherSkills": "Otras habilidades",
+  "travelRequired": "Viaje requerido",
+  "niceToHave": "Agradable de tener",
+  "startTime": "Hora de comienzo",
+  "yearOfCompletionGraduation": "Año de graduación"
+
+  },
+  "matches": {
+  "shorttotalYearsOfExperience": "Total de años de Exp.",
+  "totalYearsOfSapExperience": "Total de años de experiencia en SAP",
+  "totalYearsOfSapExperienceShort": "Total SAP Exp.",
+  "handsOnWithShort": "Manos a la mano Exp.",
+  "workAuthorisationShort": "Trabajo Auth.",
+  "endToEndImplementationShort": "Imp de extremo a extremo."
+},
+  "jobs": {
+   
+  "otherPreferences": "OTRAS PREFERENCIAS",
+  "required": "Obligatorio",
+  "requiredSkils": "Habilidades requeridas",
+  "niceToHave": "Agradable de tener",
+  "desired": "Deseado",
+  "perksBenfits": " Beneficios",
+  "healthWellness": "Salud ",
+  "officePerks": "Ventajas de la oficina ",
+  "dentalInsurance": "Seguro Dental",
+  "visionInsurance": "Seguro de Visión",
+  "healthInsurance": "Seguro de enfermedad",
+  "lifeInsurance": "Seguro de vida",
+  "paidTimeOff": "Tiempo libre pagado",
+  "vacationPolicy": "PTO / Política de Vacaciones",
+  "paidHolidays": "Vacaciones pagadas",
+  "maternity": "Permiso de Maternidad / Paternidad",
+  "financialBenefits": "Beneficios financieros",
+  "retirementPlan": "Plan de Jubilación",
+  "performanceBonus": "Bono de rendimiento",
+  "tuitionReimbursement": "Reembolso de matrícula",
+  "purchasePlan": "Plan de compra de acciones para empleados",
+  "freeFood": "Comida gratis",
+  "homePolicy": "Política de trabajo desde casa",
+  "petFriendly": "Admite mascotas",
+  "socialOutings": "Salidas sociales de la empresa",
+  "officeSpace": "Espacio de oficina único"
+  },
   "common": {
-    "yes": "si",
-    "no": "No",
-    "select": "Seleccione",
-    "next": "siguiente",
-    "previous": "Previa",
-    "submit": "enviar",
-    "apply": "Aplicar",
-    "message": "Mensaje",
-    "default": "Defecto",
-    "addResume": "Agregar currículum"
+   
+  "message": "Mensaje"
+
   },
   "home": {
-    "title": "Contratar expertos o ser contratado para cualquier trabajo, en cualquier momento",
-    "findCandidates": "Encontrar candidatas",
-    "findJobs": "Encontrar trabajos",
-    "search": "Buscar",
-    "postJob": "Trabajo posterior",
-    "postResume": "Publica tu currículum",
-    "JobsByCountry": "Trabajos por país",
-    "employer": "empleadora",
-    "jobseeker": "Demandante de empleo",
-    "staffingAgency": "Agencia de Empleo",
-    "notes": "Notas",
-    "addNotes": "Agregar notas"
-  },
+  "title": "Contratar expertos o ser contratado para cualquier trabajo, en cualquier momento",
+  "findCandidates": "Encontrar candidatos",
+  "findJobs": "Encontrar trabajo",
+  "search": "Buscar",
+  "postJob": "Publicar trabajo",
+  "postResume": "Publica tu currículum",
+  "JobsByCountry": "Empleos por país",
+  "employer": "Empleador",
+  "jobseeker": "Solicitante de empleo",
+  "staffingAgency": "Agencia de dotación de personal"
+},
   "postJob": {
-    "postYourJob": "Publica tu trabajo",
-    "jobInformation": "Informacion del trabajo",
-    "requirementCriteria": "Criterios de requisitos",
-    "jobTitle": "Título profesional",
-    "jobType": "El tipo de trabajo",
-    "contractDuration": "Duración del contrato",
-    "pay": "Pagar",
-    "country": "País",
-    "location": "Ubicación",
-    "availability": "Disponibilidad",
-    "remote": "Remota",
-    "jobDescription": "Descripción del trabajo",
-    "totalYearsOfExperience": "Años totales de experiencia",
-    "totalYearsOfSapExperience": "Años totales de experiencia en SAP",
-    "domainExperience": "Experiencia de dominio",
-    "handsOnWith": "Manos a la obra con",
-    "knowledgeOnOtherSapSkills": "Otras habilidades de SAP",
-    "programmingSkills": "Habilidades en programación",
-    "endToEndImplementation": "Implementación de extremo a extremo",
-    "niceToHave": "Encantada de tener",
-    "certification": "Certificación",
-    "workAuthorization": "autorizacion de trabajo",
-    "shouldBeACitizenPr": "Debería ser ciudadano / PR",
-    "shouldBeHavingAWorkPermit": "Debería tener un permiso de trabajo",
-    "travel": "Viajar",
-    "visaSponsorship": "Patrocinio de Visa",
-    "sapModule": "Módulo SAP",
-    "exp": "Exp",
-    "jobPreview": "Vista previa del trabajo",
-    "startTime": "Hora de inicio",
-    "willingToRelocate": "Dispuesta a reubicarse",
-    "travelRequired": "Viaje requerido",
-    "enterNumberOfPositions": "Ingrese el número de posiciones",
-    "availableIn": "Disponible en",
-    "skills": "Habilidades",
-    "salary": "Salario"
-  },
-  "dashboard": {
-    "dashboard": "Tablero",
-    "postedJobs": "Trabajos publicados",
-    "matches": "Partidos",
-    "applicants": "Solicitantes",
-    "shortlisted": "Preseleccionada",
-    "shortlist": "lista corta",
-    "jobsApplied": "Trabajos aplicados",
-    "myResumes": "Mis CV",
-    "aboutUs": "Sobre nosotras",
-    "savedProfile": "Perfil guardado",
-    "applications": "Aplicaciones",
-    "employer": "Empleadora",
-    "postedDated": "Publicado con fecha",
-    "status": "Estado",
-    "action": "Acción",
-    "active": "Activa",
-    "paused": "Pausada",
-    "closed": "Cerrada",
-    "sortBy": "Ordenar por",
-    "filter": "Filtrar",
-    "resume": "Currículum",
-    "mail": "Correo",
-    "candidateName": "Nombre de la candidata",
-    "position": "Posición",
-    "mobile": "Móvil",
-    "email": "Correo electrónico",
-    "jobDetails": "Detalles del trabajo",
-    "sendMail": "Enviar correo",
-    "postJobDetailView": "Publicar detalles del trabajo",
-    "edit": "Editar",
-    "description": "Descripción",
-    "yourPostJobs": "Tus trabajos publicados",
-    "candidateMatches": "Partidos de candidatos",
-    "totalYearsOfExp": "Años totales de exp",
-    "totalSapExp": "SAP total Exp",
-    "knowledgeOn": "Conocimiento sobre",
-    "matchOtherPosts": "Coincidir con otras publicaciones",
-    "score": "Puntuación",
-    "domainsWorked": "Dominios Trabajados",
-    "profile": "Perfil",
-    "visaSponsored": "Patrocinado por Visa",
-    "applied": "aplicada",
-    "iWillChooseWhileApplying": "Elegiré el currículum mientras solicito",
-    "startDate": "Fecha de inicio",
-    "viewAll": "Ver todo",
-    "candidateViewJobs": "Candidata Ver empleos"
-  },
+  "postYourJob": "Publicar trabajos"
+},
   "postYourResume": {
-    "candidateRegistration": "Registro de candidatos",
-    "personalDetails": "Detalles personales",
-    "educationExperience": "Educación & Experiencia",
-    "skillsets": "Conjuntos de habilidades",
-    "jobPreference": "Preferencia de trabajo",
-    "firstName": "Nombre de pila",
-    "lastName": "Apellido",
-    "emailAddress": "Dirección de correo electrónico",
-    "mobileNumber": "Número de teléfono móvil",
-    "country" : "País",
-    "state": "Estado",
-    "City": "Ciudad",
-    "zipCode": "Código postal",
-    "myLinks": "Mis enlaces",
-    "enterLinkedinUrl": "Ingrese la URL de LinkedIn",
-    "enterGithubUrl": "Ingrese la URL de github",
-    "enterYoutubeUrl": "Ingrese la URL de youtube",
-    "enterBlogUrl": "Ingrese la URL de blog",
-    "enterPortfolioUrl": "Ingrese la URL de portfolio",
-    "show": "Mostrar",
-    "uploadPhoto": "Subir foto",
-    "dragAndDrop": "Arrastrar y soltar",
-    "education": "Educación",
-    "degree": "La licenciatura",
-    "fieldOfStudy": "Campo de estudio",
-    "yearOfCompletion": "Año de finalización",
-    "experience": "Experiencia",
-    "currentEmployer": "Empleadora actual",
-    "currentRole": "Rol actual",
-    "DomainsWorked": "Dominios Trabajados",
-    "clientsWorkedWith": "Clientes trabajadas con",
-    "previousEmployers": "Empleadores Anteriores",
-    "handsOnExperience": "Experiencia práctica",
-    "others": "Otras",
-    "rolesLookingFor": "Buscando roles",
-    "preferredLocation": "Ubicación preferida",
-    "iHaveWorkAuthorization": "Tengo autorización de trabajo",
-    "iNeedVisaAponsorship": "Necesito patrocinio de visa",
-    "arYouWillingToRelocate": "Estas dispuesta a reubicarte",
-    "onlyRemote": "Solo remota",
-    "sapCategory": "SAP Categoría",
-    "nationality": "Nacionalidad",
-    "previousemployers": "Empleadores anteriores",
-    "selectcountry": "Seleccione el país en el que está autorizado a trabajar",
-    "othercountry": "Otro país",
-    "visatype": "Tipo de visa",
-    "visatype": "Idiomas Conocido",
-    "read": "Leer",
-    "write": "Escribir",
-    "speak": "Hablar",
-    "addreference": "Añadir referencia"
-  }
+  "candidateRegistration": "Registro de candidatos",
+  "myLinks": "Mis enlaces",
+  "enterLinkedinUrl": "Introduzca la url de linkedin",
+  "enterGithubUrl": "Introduce la url de github",
+  "enterYoutubeUrl": "Introduce la url de youtube",
+  "enterBlogUrl": "Introduzca la url del blog",
+  "enterPortfolioUrl": "Introduzca la URL de la cartera"
+}
 }
