--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -6,7 +6,15 @@
 	  "later":"Later",
 	  "upload":"Upload",
 	  "uploadSuccess":"Great, you have a new match!!",
+	  "fullTime":"Full Time",
+	  "partTime":"Part Time",
+	  "contract":"Contract",
+	  "freelance":"Freelance",
+	  "internship":"Internship",
 	  "ok":"Ok",
+	  "year":"Years",
+	  "yearAbove":"Years & above",
+	  "fresher":"Freshers",
 	  "jobDesc":"Roles and responsibilities",
 	  "download":"Download",
 	  "goMatches":"Go to Matches",
