--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -16,6 +16,7 @@
 	  "yearAbove":"Years & above",
 	  "fresher":"Freshers",
 	  "jobDesc":"Roles and responsibilities",
+	  "negotiable":"Negotiable",
 	  "download":"Download",
 	  "goMatches":"Go to Matches",
 	  "greeting":"Hello",
@@ -48,7 +49,7 @@
 	  "salary":"Salary",
 	  "sapSkills":"SAP Skills",
 	  "applied":"Applied",
-	  "description":"Description",
+	  "description":"Responsibility",
 	  "apply":"Apply",
 	  "missing":"Missing",
 	  "moreSkills":"More Skills",
