--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -335,6 +335,8 @@
 	"screeningProcess":"Screening Process Title",
 	"inviteURL":"Invite URL (optional)",
 	"inviteLink":"Invite Link",
+	"inviteSettings":"Calender Settings",
+	"inviteSettingsTitle":"Click here to add the calendly",
 	"AddInviteLink":"Add Invite Link",
     "addResume": "Add Resume"
   },
