--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -332,6 +332,12 @@
     "currentPassword": "Current Password",
     "newPassword": "New Password",
     "confirmPassword": "Confirm Password",
+	"screeningProcess":"Screening Process Title",
+	"inviteURL":"Invite URL (optional)",
+	"inviteLink":"Invite Link",
+	"inviteSettings":"Calender Settings",
+	"inviteSettingsTitle":"Click here to add the calendly",
+	"AddInviteLink":"Add Invite Link",
     "addResume": "Add Resume"
   },
   "home": {
