--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -164,7 +164,7 @@
   },
   "profileSettings":{
 	  "photo":"Profile Image",
-	  "phone":"Phone Numer",
+	  "phone":"Phone Number",
 	  "email":"Email ID",
 	  "employees":"Employees",
 	  "openJobs":"Open Jobs",
