Text and image changes

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -103,6 +103,7 @@
       "previous": "Previous",
       "submit": "Submit",
       "update": "Update",
+      "resend": "Resend",
       "updateNext": "Update & Next",
       "location": "Location",
       "status": "Status",
@@ -163,7 +164,7 @@
   },
   "profileSettings":{
 	  "photo":"Profile Image",
-	  "phone":"Phone Numer",
+	  "phone":"Phone Number",
 	  "email":"Email ID",
 	  "employees":"Employees",
 	  "openJobs":"Open Jobs",
@@ -328,6 +329,7 @@
     "date": "Date",
     "contactDetails": "Contact Details",
     "date": "Date",
+    "history": "History",
     "userName": "User Name",
     "currentPassword": "Current Password",
     "newPassword": "New Password",
